--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,175 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100&display=swap');
 
-body {
+html, body {
     font-family: 'Roboto';
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* NAV */
+
+#nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+}
+
+.nav__logo {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-left: 210px;
+}
+
+.nav__links {
+    margin-right: 15%;
+}
+
+.nav__link {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 0.9rem;
+    margin-left: 16px;
+}
+
+.nav__link:hover {
+    color: #cccccc;
+}
+
+/* HEADER */
+#header {
+    display: flex;
+    background-color: #1F2937;
+    color: white;
+    padding: 4rem 0;
+}
+
+.header__hero-text {
+    margin-left: 210px;
+    margin-right: 5rem;
+    width: 40%;
+}
+
+.header__hero-main {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.header__hero-secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header__image {
+    margin-right: 15%;
+}
+
+.header__img {
+    width: 100%;
+    height: auto;
+}
+
+.button {
+    color: white;
+    background-color: #3882F6;
+    border: none;
+    padding: 0.4rem 1.8rem;
+    font-weight: 700;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+
+.first-container__title {
+    text-align: center;
+    font-weight: 900;
+    font-size: 2rem;
+    margin-top: 2rem;
+}
+
+.main__first-container {
+    margin: 4rem 0;
+}
+
+.main__first-container__boxes {
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.box {
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 3rem;
+    border: solid 0.2rem #3882F6;
+    border-radius: 0.5rem;
+}
+
+.main__text {
+    width: 10rem;
+    margin: 1rem 0;
+}
+
+.main__second-container {
+    background-color: #E5E7EB;
+    padding: 5rem 3rem;
+}
+
+.main__quote {
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1F2937;
+    padding: 0 15rem;
+    margin-bottom: 0;
+}
+
+.main__name {
+    text-align: end;
+    padding: 0 15rem;
+    margin: 0;
+    font-weight: 700;
+}
+
+.main__CTA {
+    padding: 4rem 10rem;
+}
+
+
+.main__CTA-container {
+    display: flex;
+    justify-content: space-around;
+    background-color: #3882F6;
+    border-radius: 0.2rem;
+    padding: 2rem 0;
+}
+
+.CTA__text {
+    color: white;
+}
+
+.CTA__button {
+    border: solid 0.1rem #FFFFFF;
+    margin: 1rem;
+}
+
+.strong {
+    font-weight: 800;
+    font-size: 1.3rem;
+}
+
+#footer {
+    background-color: #1F2937;
+    color: white;
+    margin: 0;
+    padding: 0.2rem;
+}
+
+.footer__text {
+    text-align: center;
+    font-size: 0.8rem;
 }
